# repo-template-python

./: .editorconfig  .gitignore  AGENTS.md  AI_CONTEXT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  REPO_POLICY.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-master-promotion.yml  ci-pr-title.yml  ci-python.yml  release-tag.yml
docs/: architecture.md  overview.md
docs/adr/: 0001-template.md
docs/doctrine/: README.md  coding.md  doctrine-governance.md  identity.md  naming.md  project-standards.md  repo-management.md
docs/doctrine/templates/: doctrine-change-record-template.md  repo-visibility-note-template.md
src/project_name/: __init__.py  __main__.py
tools/: validate-template.sh
